# email-notification

./: .env  README.md  app.py  pyproject.toml
